@@ -133,6 +133,8 @@ void PrefGeneral::retranslateStrings() {
 
 void PrefGeneral::setData(Preferences * pref) {
 	setMplayerPath( pref->mplayer_bin );
+
+	setUseScreenshots( pref->use_screenshot );
 	setScreenshotDir( pref->screenshot_directory );
 
 	QString vo = pref->vo;
@@ -205,6 +207,7 @@ void PrefGeneral::getData(Preferences * pref) {
 		//setDrivers( i.voList(), i.aoList() );
 	}
 
+	TEST_AND_SET(pref->use_screenshot, useScreenshots());
 	TEST_AND_SET(pref->screenshot_directory, screenshotDir());
 	TEST_AND_SET(pref->vo, VO());
     TEST_AND_SET(pref->ao, AO());
@@ -343,6 +346,14 @@ void PrefGeneral::setMplayerPath( QString path ) {
 
 QString PrefGeneral::mplayerPath() {
 	return mplayerbin_edit->text();
+}
+
+void PrefGeneral::setUseScreenshots(bool b) {
+	use_screenshots_check->setChecked(b);
+}
+
+bool PrefGeneral::useScreenshots() {
+	return use_screenshots_check->isChecked();
 }
 
 void PrefGeneral::setScreenshotDir( QString path ) {
@@ -690,12 +701,6 @@ void PrefGeneral::createHelp() {
         tr("If this setting is wrong, SMPlayer won't be able to play "
            "anything!") + "</b>");
 
-	setWhatsThis(screenshot_edit, tr("Screenshots folder"),
-		tr("Here you can specify a folder where the screenshots taken by "
-           "SMPlayer will be stored. If this field is empty the "
-           "screenshot feature will be disabled.") );
-
-
 	setWhatsThis(remember_all_check, tr("Remember settings"),
 		tr("Usually SMPlayer will remember the settings for each file you "
            "play (audio track selected, volume, filters...). Disable this "
@@ -714,6 +719,15 @@ void PrefGeneral::createHelp() {
 		tr("<b>multiple ini files</b>: one ini file will be used for each played file. "
            "Those ini files will be saved in the folder %1").arg(QString("<i>"+Paths::iniPath()+"/file_settings</i>")) + "</li></ul>" +
 		tr("The latter method could be faster if there is info for a lot of files.") );
+
+	setWhatsThis(use_screenshots_check, tr("Enable screenshots"),
+		tr("You can use this option to enable or disable the possibility to "
+           "take screenshots.") );
+
+	setWhatsThis(screenshot_edit, tr("Screenshots folder"),
+		tr("Here you can specify a folder where the screenshots taken by "
+           "SMPlayer will be stored. If the folder is not valid the "
+           "screenshot feature will be disabled.") );
 
 	setWhatsThis(close_on_finish_check, tr("Close when finished"),
 		tr("If this option is checked, the main window will be automatically "
